Made L1 cache optional through --enable-l1cache
	* Removed stale config.h
	* Updated autoconf script with relevant checks
	* Re-implemented leon3/grlib timer with less events
	* Bumped version to 2.15

--- a/README
+++ b/README
@@ -14,3 +14,6 @@ To build a PDF version of the manual, do
 
 	make sis.pdf.
 
+
+To enable emulation of an L1 cache, run configure with --enable-l1cache. This option
+only improves timing accuracy, it does not affect simulation behaviour.
